# agentic-ai-engineering-lab

./: .env.example  .gitignore  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/agent-api/: Dockerfile  pyproject.toml
apps/agent-api/agent_api/: __init__.py  main.py  metrics.py
apps/agent-api/tests/: test_api.py
docs/: ACCESS_REQUIREMENTS.md  ARCHITECTURE.md  INTERVIEW_WALKTHROUGH.md  OBSERVABILITY_AND_GRAFANA.md  SECURITY_AND_GOVERNANCE.md  SKILLS_MATRIX.md
docs/resume/: Agentic_AI_Resume_Integration_Guide.docx  CITI_AGENTIC_AI_RESUME_EXPORT.md
evals/: cases.json
observability/: docker-compose.yml  loadgen.py
observability/grafana/dashboards/: agent-slo-command-center.json  cost-quality-correlator.json  tool-reliability-lab.json
observability/grafana/provisioning/alerting/: alert-rules.yml
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: prometheus.yml
observability/prometheus/: prometheus.yml
scripts/: build_grafana_dashboards.py  build_resume_export.py  run-evals.ts  validate_observability.py
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/api/health/: route.ts
src/app/api/runs/: route.ts
src/components/: mission-control.tsx
src/lib/: engine.ts  evaluation.ts  policy.ts  scenarios.ts  types.ts
src/lib/providers/: openai.ts
tests/: engine.test.ts  evaluation.test.ts  policy.test.ts
