[project]
name = "agentic-systems-api"
version = "1.0.0"
description = "A small FastAPI reference implementation for guarded agent workflows."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115,<1", "prometheus-client>=0.21,<1", "pydantic>=2.10,<3", "uvicorn>=0.34,<1"]

[project.optional-dependencies]
dev = ["httpx>=0.28,<1", "pytest>=8.3,<9", "pyyaml>=6,<7", "ruff>=0.9,<1"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
